<resources>
    <string name="app_name">Bean and Mango Salad by Amalan</string>
    <string name="btnRecipe">View Recipe</string>
    <string name="txtTitle">Bean and Mango Salad Recipe</string>
    <string name="txtMix">In a medium salad bowl, mix together the mango, black beans, navy beans, onion and cilantro. Toss with the balsamic vinaigrette dressing.</string>
    <string name="txtItem1">1 mango - peeled, seeded and diced</string>
    <string name="txtItem2">15 ounce can black beans, rinsed and drained</string>
    <string name="txtItem3">15 ounce  can navy beans, rinsed and drained</string>
    <string name="txtItem4">half cup chopped fresh cilantro</string>
    <string name="txtItem5">half cup chopped onion</string>
    <string name="txtItem6">half cup balsamic vinaigrette salad dressing</string>
    <string name="txtDirections">Directions</string>
    <string name="txtIngredients">Ingredients</string>
    <string name="title_activity_recipe">Recipe</string>
    <string name="description">Recipe Image</string>
    <string name="why">Why it healthy</string>
    <string name="healthy">Although it may sound like an odd combination of foods, at least it did to me at first, it is a tasty and hearty salad. You may want to alter the dressing and onion amounts to your taste</string>
</resources>
