<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="368dp"
        android:layout_height="526dp"
        android:background="@color/appkg"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/txtTitle "
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="45dp"
            android:text="@string/txtTitle"
            android:textAlignment="center"
            android:textColor="@color/titlerec"
            android:textSize="@dimen/titleSize" />

        <ImageView
            android:id="@+id/imagerecepi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/txtTitle "
            android:layout_marginStart="22dp"
            android:contentDescription="@string/description"
            app:srcCompat="@drawable/beanandmango" />

        <Button
            android:id="@+id/btnRecipe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="62dp"
            android:text="@string/btnRecipe"
            android:textColor="@color/btnclo"
            android:textSize="@dimen/btnsize" />

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>